2004-09-26  Richard Hoelscher  <rah@rahga.com>

	* drawing.c (load_images): Unref the old tilepixbuf on theme change.

2004-09-15  callum  <callum@spooky-possum.org>

	* mahjongg.c (mapset_changed_cb): Remove whitespace before punctuation.

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/figures/*.png:
	* help/C/mahjongg.xml: Update for 2.8.

2004-08-26  callum  <callum@spooky-possum.org>

	* mahjongg.c: Be explicit about the game_over enumeration starting
	at 0, we make assumptions about this and while most modern
	compilers should be OK, I have a bug (#145543) which I think is a
	result of this assumption failing.

2004-08-24  Richard Hoelscher  <rahga@localhost.localdomain>

	* drawing.c (configure_pixmaps): Recreate tile images only when 
	the tileset changed, or if tile size changed after window resize.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* maya.png:
	* default.png: Moved these themes to the gnome-games-extra-data
	package.

2004-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* postmodern.svg:
	* mahjongg.schemas.in: Use the upgraded postmodern.svg from 
	Richard Hoelscher and make it the default.

2004-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Replace the dialog warning you about the map change
	not taking effect until the next game with one that offers the
	chance of starting a new game immediately.

2004-06-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Remove the explicit shuffle controls and
	only offer shuffle if the player has run out of moves.
	The undo button is now also offered rather than an OK
	button that leaves an unplayable board. Fixes bug
	#139295.

	* solubility.c: Fix the shuffle routine so that the same 
	tiles are reused. Fixes bug #139294.

2004-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Make sure the state of the pause menubar button
	is always correct. Fixes bug #143465.
