@@ -1,3 +1,11 @@
+2004-10-13  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* help/C/mahjongg.xml: Update docs to reflect the lack of a seed.
+
+	* mahjongg.c: Remove the seed, both the UI and all the internal
+	mechanisms. Also removed the old "confirm_action" multiplexer in
+	favour of individual callbacks now that we don't confirm actions.
+
 2004-09-26  Richard Hoelscher  <rah@rahga.com>
 
 	* drawing.c (load_images): Unref the old tilepixbuf on theme change.
